# Triple-Ten-Projects

./: .gitignore  README.md
Chicago-Mobility-Analytics/: .coverage  DATA_LICENSE  Dockerfile  LICENSE  Makefile  README.md  data_card.md  docker-compose.yml  evaluate.py  main.py  model_card.md  postgis_schema.sql  pyproject.toml  requirements-core.txt  requirements.in  requirements.txt  run_train.sh
Chicago-Mobility-Analytics/app/: example_load.py  fastapi_app.py
Chicago-Mobility-Analytics/artifacts/: metrics.json
Chicago-Mobility-Analytics/configs/: default.yaml
Chicago-Mobility-Analytics/data/: preprocess.py
Chicago-Mobility-Analytics/data/processed/: trips_weather_features.csv
Chicago-Mobility-Analytics/models/: duration_model.pkl  model_v1.0.0.pkl
Chicago-Mobility-Analytics/monitoring/: check_drift.py
Chicago-Mobility-Analytics/notebooks/: demo.ipynb  geospatial_demo.ipynb  operational_impact.ipynb
Chicago-Mobility-Analytics/scripts/: geo_convert.py  run_mlflow.py
Chicago-Mobility-Analytics/tests/: conftest.py  test_data.py  test_fairness.py  test_model.py  test_preprocessing.py
Gaming-Market-Intelligence/: .coverage  DATA_LICENSE  Dockerfile  Makefile  README.md  data_card.md  docker-compose.yml  evaluate.py  evaluate_business.py  main.py  model_card.md  pyproject.toml  requirements-core.txt  requirements.in  requirements.txt
Gaming-Market-Intelligence/app/: example_load.py  fastapi_app.py
Gaming-Market-Intelligence/configs/: config.yaml
Gaming-Market-Intelligence/data/: preprocess.py
Gaming-Market-Intelligence/monitoring/: check_drift.py
Gaming-Market-Intelligence/notebooks/: demo.ipynb  exploratory.ipynb  presentation.ipynb  retention_survival.ipynb
Gaming-Market-Intelligence/scripts/: export_stats.py  run_mlflow.py
Gaming-Market-Intelligence/tests/: test_data.py  test_fairness.py  test_model.py  test_preprocessing.py
GoldRecovery-Process-Optimizer/: .coverage  DATA_LICENSE  Dockerfile  Makefile  README.md  data_card.md  docker-compose.yml  evaluate.py  main.py  model_card.md  pyproject.toml  requirements-core.txt  requirements.in  requirements.txt
GoldRecovery-Process-Optimizer/app/: example_load.py  fastapi_app.py  streamlit_dashboard.py
GoldRecovery-Process-Optimizer/configs/: config.yaml
GoldRecovery-Process-Optimizer/data/: preprocess.py
GoldRecovery-Process-Optimizer/monitoring/: check_drift.py
GoldRecovery-Process-Optimizer/notebooks/: demo.ipynb  exploratory.ipynb  presentation.ipynb
GoldRecovery-Process-Optimizer/scripts/: recovery_simulation.py  run_mlflow.py  run_optuna.py
GoldRecovery-Process-Optimizer/tests/: test_data.py  test_fairness.py  test_model.py  test_preprocessing.py
OilWell-Location-Optimizer/: .coverage  DATA_LICENSE  Dockerfile  Makefile  README.md  data_card.md  docker-compose.yml  evaluate.py  main.py  model_card.md  pyproject.toml  requirements-advanced.txt  requirements-core.txt  requirements.in  requirements.txt
OilWell-Location-Optimizer/app/: example_load.py  fastapi_app.py
OilWell-Location-Optimizer/configs/: default.yaml
OilWell-Location-Optimizer/data/: __init__.py  preprocess.py
OilWell-Location-Optimizer/monitoring/: check_drift.py
OilWell-Location-Optimizer/notebooks/: demo.ipynb  exploratory.ipynb  presentation.ipynb  risk_pipeline_end_to_end.ipynb
OilWell-Location-Optimizer/scripts/: optimize_selection.py  run_mlflow.py  run_train.sh  sensitivity.py
OilWell-Location-Optimizer/tests/: test_api_e2e.py  test_data.py  test_model.py  test_preprocessing.py
