[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaming-market-intelligence"
version = "1.0.0"
description = "Video game success prediction with survival analysis and market analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Duque", email = "daniel.duque@example.com"}
]
keywords = ["machine-learning", "gaming", "market-analysis", "survival-analysis"]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.78.0",
    "uvicorn>=0.18.0",
    "streamlit>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
stats = [
    "lifelines>=0.27.0",
    "statsmodels>=0.13.0",
]
ml = [
    "mlflow>=2.0.0",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing --cov-fail-under=50"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
