[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oilwell-location-optimizer"
version = "1.0.0"
description = "Oil well location optimization with bootstrap risk analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Duque", email = "daniel.duque@example.com"}
]
keywords = ["machine-learning", "regression", "bootstrap", "risk-analysis", "energy"]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "pyyaml>=6.0",
    "fastapi>=0.78.0",
    "uvicorn>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
ml = [
    "mlflow>=2.0.0",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing --cov-fail-under=50"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
